--- a/djangoweb/website/templates/website/base.html
+++ b/djangoweb/website/templates/website/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% include "website/partials/_head.html" %}
 </head>
 <body>
+    {% include "website/partials/_header.html" %}
+
     {% block content %}{% endblock content %}
+
+    {% include "website/partials/_footer.html" %}
+
 </body>
 </html>
