--- a/djangoweb/website/templates/website/partials/_head.html
+++ b/djangoweb/website/templates/website/partials/_head.html
@@ -2,4 +2,4 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{% static "website/css/style.css" %}">
-<title>Gazil Equipamentos</title>
+<title>{{ site_setup.title }}</title>
