--- a/djangoweb/website/templates/website/partials/_head.html
+++ b/djangoweb/website/templates/website/partials/_head.html
@@ -1,6 +1,7 @@
 {% load static %}
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{% static "website/css/remedy.css" %}">
 <link rel="stylesheet" href="{% static "website/css/style.css" %}">
 
 {% if site_setup.favicon %}
