Structuring the CSS.

--- a/djangoweb/website/templates/website/partials/_head.html
+++ b/djangoweb/website/templates/website/partials/_head.html
@@ -8,3 +8,4 @@
     <link rel="shortcut icon" href="{{ site_setup.favicon.url }}" type="image/png">
 {% endif %}
 <title>{{ site_setup.title }}</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
