--- a/djangoweb/website/templates/website/base.html
+++ b/djangoweb/website/templates/website/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,5 +11,6 @@
 
     {% include "website/partials/_footer.html" %}
 
+    <script src="{% static 'website/js/header.js' %}"></script>
 </body>
 </html>
