--- a/djangoweb/website/templates/website/partials/_header.html
+++ b/djangoweb/website/templates/website/partials/_header.html
@@ -79,7 +79,7 @@
                 <a href="#" class="nav-link">Quem somos</a>
             </li>
             <li>
-                <a href="#" class="nav-link">Contato</a>
+                <a href="#" class="nav-link">Contatos</a>
             </li>
         </ul>
     </nav>
