--- a/djangoweb/website/templates/website/base.html
+++ b/djangoweb/website/templates/website/base.html
@@ -11,6 +11,8 @@
 
     {% include "website/partials/_footer.html" %}
 
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="{% static 'website/js/header.js' %}"></script>
+    <script src="{% static 'website/js/banners.js' %}"></script>
 </body>
 </html>
