--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -4,7 +4,8 @@
     --color-secondary: #D90429;      /* Vermelho (botões, destaques) */
     --color-light: #ECECEC;          /* Fundos claros */
     --color-white: #FAFAFA;
-    --color-gray: #8D99AE;           /* Bordas, textos secundários */
+    --color-gray: #8D99AE;
+    --color-dark-gray: #555;           /* Bordas, textos secundários */
 
     /* FONTES */
 
@@ -53,7 +54,29 @@ a {
     color: inherit;
 }
 
-/* HEADER */
+/* ======= WHATSAPP ICON ======== */
+.whatsapp-float{
+    position: fixed;
+    width: 80px;
+    height: 80px;
+    bottom: 80px;
+    right: 30px;
+    z-index: 9999;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.whatsapp-float img {
+    width: 100%;
+    height: auto;
+    filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
+}
+
+.whatsapp-float:hover{
+    transform: scale(1.1);
+}
+
+/* ===========   HEADER   ============ */
 .container {
     width: 90%;
     max-width: 1100px;
@@ -123,7 +146,7 @@ a {
     color: var(--color-secondary);
 }
 
-/* Dropdown navbar Produtos */
+/* == Dropdown navbar Produtos == */
 
 .dropdown-parent{
     position: relative;
@@ -186,7 +209,7 @@ a {
 }
 
 
-/* === MENU MOBILE + RESPONSIVIDADE */
+/* ====== MENU MOBILE ====== */
 
 .hamburger {
     display: none; 
@@ -221,15 +244,14 @@ a {
 
 /* ===== MENU MOBILE ===== */
 .nav-mobile {
-    position: fixed;
+    position: absolute;
     top: 100px;
     left: 0;
     width: 100%;
     background: var(--color-white);
     box-shadow: var(--shadow-md);
-    height: calc(100vh - 67px);
+    padding-bottom: 1rem 0;
     transform: translateY(-10%);
-    overflow-y: auto;
     opacity: 0;
     pointer-events: none;
     transition: transform 0.5s ease, opacity 0.5s ease;
@@ -243,7 +265,7 @@ a {
     pointer-events: auto;
 }
 
-/* Dropdown Mobile */
+/* ==== Dropdown Mobile ==== */
 .nav-mobile .dropdown-menu {
     padding-left: var(--space-md);
     padding-right: var(--space-md);
@@ -307,7 +329,7 @@ a {
     position: relative;
     overflow: hidden;
     background-color: var(--color-white);
-    top: 105px;
+    margin-top: 105px;
     margin-bottom: 2rem;
 }
 
@@ -424,16 +446,89 @@ a {
     opacity: 1;
     pointer-events: auto;
 }
-/* ===== RESPONSIVIDADE ===== */
+
+/* === PRODUTOS DESTACADOS === */
+.product-card-link{
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+.featured-products {
+    padding: 4rem 2rem;
+    background-color: var(--color-light);
+    margin-top: 4rem;
+}
+
+.section-title{
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+}
+
+.products-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 2rem;
+}
+
+.product-card {
+    background: white;
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow-md);
+    padding: 2rem 1.5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.product-card:hover{
+    transform: translateY(-5px);
+}
+
+.product-card a img {
+    max-width: 100%;
+    height: 160px;
+    object-fit: cover;
+    border-radius: var(--border-radius);
+}
+
+.product-title {
+    font-size: 1.4rem;
+    color: var(--color-dark-gray);
+    line-height: 1.5;
+}
+
+.product-btn {
+    background-color: var(--color-secondary);
+    color: white;
+    padding: 0.6rem 1.2rem;
+    border-radius: var(--border-radius);
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: background 0.3s;
+    align-self: center;
+}
+
+.product-btn:hover {
+    background-color: #a80320;
+}
+
+
+
+/* ============== RESPONSIVIDADE ================= */
 
 @media (max-width: 1050px) {
 
     .banner-slider{
-        aspect-ratio: 17 / 5
+        aspect-ratio: 17 / 6;
     }
 
     .banner-image{
-        aspect-ratio: 17 / 5;
+        aspect-ratio: 17 / 6;
     }
     
     .banner-description{
@@ -501,6 +596,14 @@ a {
 
     /* ==== BANNER ==== */
 
+    .banner-slider{
+        aspect-ratio: 17 / 8;
+    }
+
+    .banner-image{
+        aspect-ratio: 17 / 8;
+    }
+
     .banner-slide{
         width: 100%;
         height: 100%;
@@ -520,6 +623,14 @@ a {
     .logo-text {
         padding: 0;
         margin: 1.4rem 5rem;
+    }
+
+    .banner-slider{
+        aspect-ratio: 14 / 8;
+    }
+
+    .banner-image{
+        aspect-ratio: 14 / 8;
     }
 
     .banner-description{
@@ -577,6 +688,3 @@ a {
         margin: 1.4rem 5rem;
     }
 }
-
-
-
